Fixed input boxe attributes/quantity alignment.

--- a/cartridges/app_storefront_base/cartridge/client/default/scss/components/_quickView.scss
+++ b/cartridges/app_storefront_base/cartridge/client/default/scss/components/_quickView.scss
@@ -121,4 +121,17 @@
         display: block;
         margin-bottom: 0.5rem;
     }
+
+    .product-options {
+        margin-top: 0.25em;
+
+        .quantity {
+            bottom: 0;
+            min-width: 6.25em;
+            padding-left: 0.938em;
+            padding-right: 0.938em;
+            position: absolute;
+            right: 0;
+        }
+    }
 }
