--- a/cartridges/app_storefront_base/cartridge/client/default/scss/product/detail.scss
+++ b/cartridges/app_storefront_base/cartridge/client/default/scss/product/detail.scss
@@ -143,7 +143,7 @@ label.availability {
 }
 
 .product-options {
-    margin-top: 1.25em;
+    margin-top: 0.25em;
 
     .quantity {
         bottom: 0;
